Remove some left-over +1 in font height calculation

In change cb8445f0323b0eefbb04f1d8adad81a00b53abd8, I tried to
remove all the historical +1s when calculating the font height
from the ascent and descent, but I missed a couple. These are
used when drawing the background for the text, the height of which
would no longer match the height returned from QFontMetrics.

[ChangeLog][Text] Fixed off-by-one in the height of text background.

Task-number: QTBUG-36444
Change-Id: If6d87f903e246f9faed2298bb1693b2556906eed
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>

cregit: 11189af016c1deeefed476c5cc3a408f6ee79a2d https://github.com/qt/qtbase/commit/11189af016c1deeefed476c5cc3a408f6ee79a2d