src/gui/painting/qemulationpaintengine.cpp
@@ -891,8 +891,6 @@ operator|+
 name|ti
 operator|.
 name|descent
-operator|+
-literal|1
 operator|)
 operator|.
 name|toReal
